# Turing-Machine-Simulator

./: Cargo.toml
examples/: hello.ron  hello.tm  w#w.ron  w#w.tm  w#w2.tm
src/: main.rs  parse.rs  program.rs  program_ron.rs  tape.rs  turing_machine.rs
