[package]
name = "turing-machine"
version = "0.2.0"
authors = ["hypen-emdash <joffe.daniel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
smol_str = "0.1"
unicode-segmentation = "1.3"
serde = "1"
ron = "0.5"
structopt = "0.3"
